--- a/app/src/main/res/layout/activity_change_password2.xml
+++ b/app/src/main/res/layout/activity_change_password2.xml
@@ -159,7 +159,7 @@
                     android:layout_height="wrap_content"
                     android:text="完成"
                     android:layout_marginTop="15dp"
-                    android:background="@drawable/yuanjiaolan"
+                    android:background="@drawable/yuanjiaolan2"
                     android:gravity="center"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
