--- a/app/src/main/res/layout/activity_footprints.xml
+++ b/app/src/main/res/layout/activity_footprints.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="我的足迹"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -39,11 +39,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text01"
+                android:textSize="14sp"
                 android:textColor="@color/text05"
                 android:paddingLeft="@dimen/left"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
                 android:text="当前登录"/>
             <com.example.duan.duan.DCZ_selft.GridViewForScrollView
                 android:id="@+id/lv1"
@@ -56,11 +56,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text01"
+                android:textSize="14sp"
                 android:textColor="@color/text05"
                 android:paddingLeft="@dimen/left"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingTop="7dp"
                 android:text="最近登录记录"/>
             <com.example.duan.duan.DCZ_selft.GridViewForScrollView
                 android:id="@+id/lv2"
