--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,53 +28,61 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <TextView
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
+            android:padding="20dp"
             android:text="找回密码"
             android:textColor="@color/text07"
-            android:textSize="@dimen/text02"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"/>
+            android:textSize="@dimen/text02" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginLeft="@dimen/left"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <ImageView
                     android:layout_width="23dp"
                     android:layout_height="23dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@mipmap/zhanghao"/>
+                    android:src="@mipmap/zhanghao" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="请输入账号"
-                    android:textSize="@dimen/text01"
-                    android:singleLine="true"
                     android:layout_marginLeft="10dp"
-                    android:textColorHint="@color/text06"
                     android:background="@null"
+                    android:hint="请输入账号"
+                    android:singleLine="true"
+                    android:textColor="@color/text05"
+                    android:textColorHint="@color/text06"
                     android:textCursorDrawable="@null"
-                    android:textColor="@color/text05"/>
+                    android:textSize="@dimen/text01" />
             </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/xian"
-                android:background="@color/xian1"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="15dp"
+                android:background="@color/xian1" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,48 +98,52 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
                     android:hint="请输入登录密码"
-                    android:textSize="@dimen/text01"
                     android:inputType="number"
                     android:singleLine="true"
-                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/text05"
                     android:textColorHint="@color/text06"
-                    android:background="@null"
                     android:textCursorDrawable="@null"
-                    android:textColor="@color/text05"/>
+                    android:textSize="@dimen/text01" />
             </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/xian"
-                android:background="@color/xian1"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="15dp"
+                android:background="@color/xian1" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/button_hui"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="下一步"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/yuanjiaohui"
                     android:gravity="center"
-                    android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textSize="@dimen/title"
-                    android:textColor="@color/text05"/>
+                    android:paddingTop="10dp"
+                    android:text="下一步"
+                    android:textColor="@color/text05"
+                    android:textSize="@dimen/title" />
+
                 <TextView
                     android:id="@+id/button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="下一步"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/yuanjiaolan"
                     android:gravity="center"
-                    android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textSize="@dimen/title"
-                    android:textColor="@color/white"/>
+                    android:paddingTop="10dp"
+                    android:text="下一步"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/title" />
             </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
