--- a/app/src/main/res/layout/activity_security_protect.xml
+++ b/app/src/main/res/layout/activity_security_protect.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,19 +11,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="安全保护"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text02"
+            android:textSize="@dimen/text01"
             android:textColor="@color/text05"
             android:text="已开启3类业务账户授权保护"/>
         <TextView
@@ -59,19 +60,24 @@
         android:paddingLeft="@dimen/left"
         android:paddingTop="10dp">
 
-        <ImageView
-            android:id="@+id/iv1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/t0r" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv1"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            fresco:placeholderImage="@mipmap/zhanwei"
+            fresco:placeholderImageScaleType="fitCenter"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundTopLeft="true"
+            fresco:roundTopRight="true"
+            fresco:roundBottomLeft="true"
+            fresco:roundBottomRight="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv1"
+            android:layout_toRightOf="@id/sdv1"
             android:text="钱包"
             android:textColor="@color/text05"
             android:textSize="@dimen/text01" />
@@ -100,19 +106,24 @@
         android:paddingLeft="@dimen/left"
         android:paddingTop="10dp">
 
-        <ImageView
-            android:id="@+id/iv2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/t0r" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv2"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            fresco:placeholderImage="@mipmap/zhanwei"
+            fresco:placeholderImageScaleType="fitCenter"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundTopLeft="true"
+            fresco:roundTopRight="true"
+            fresco:roundBottomLeft="true"
+            fresco:roundBottomRight="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv2"
+            android:layout_toRightOf="@id/sdv2"
             android:text="撮合交易平台"
             android:textColor="@color/text05"
             android:textSize="@dimen/text01" />
@@ -141,19 +152,24 @@
         android:paddingLeft="@dimen/left"
         android:paddingTop="10dp">
 
-        <ImageView
-            android:id="@+id/iv3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/t0r" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv3"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            fresco:placeholderImage="@mipmap/zhanwei"
+            fresco:placeholderImageScaleType="fitCenter"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundTopLeft="true"
+            fresco:roundTopRight="true"
+            fresco:roundBottomLeft="true"
+            fresco:roundBottomRight="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv3"
+            android:layout_toRightOf="@id/sdv3"
             android:text="王者荣耀"
             android:textColor="@color/text05"
             android:textSize="@dimen/text01" />
@@ -182,19 +198,24 @@
         android:paddingLeft="@dimen/left"
         android:paddingTop="10dp">
 
-        <ImageView
-            android:id="@+id/iv4"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/t0r" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv4"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            fresco:placeholderImage="@mipmap/zhanwei"
+            fresco:placeholderImageScaleType="fitCenter"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundTopLeft="true"
+            fresco:roundTopRight="true"
+            fresco:roundBottomLeft="true"
+            fresco:roundBottomRight="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv4"
+            android:layout_toRightOf="@id/sdv4"
             android:text="淘宝商城"
             android:textColor="@color/text05"
             android:textSize="@dimen/text01" />
@@ -223,19 +244,24 @@
         android:paddingLeft="@dimen/left"
         android:paddingTop="10dp">
 
-        <ImageView
-            android:id="@+id/iv5"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/t0r" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv5"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            fresco:placeholderImage="@mipmap/zhanwei"
+            fresco:placeholderImageScaleType="fitCenter"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundTopLeft="true"
+            fresco:roundTopRight="true"
+            fresco:roundBottomLeft="true"
+            fresco:roundBottomRight="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv5"
+            android:layout_toRightOf="@id/sdv5"
             android:text="竞技运动场"
             android:textColor="@color/text05"
             android:textSize="@dimen/text01" />
