--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="密码安全"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -29,55 +29,67 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/left"
-        android:paddingRight="20dp"
-        android:orientation="vertical">
+        android:paddingRight="20dp">
+
         <ImageView
             android:layout_width="150dp"
-            android:layout_height="170dp"
+            android:layout_height="150dp"
             android:layout_marginTop="30dp"
-            android:background="@mipmap/sao1"/>
+            android:background="@mipmap/mibaophone2" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
             android:layout_marginTop="20dp"
+            android:text="账户存在严重风险"
             android:textColor="@color/text05"
-            android:text="账户密码安全等级较高"/>
+            android:textSize="17sp" />
+
         <TextView
+            android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/text05"
-            android:text="请继续保持，并定期更新密码"/>
+            android:layout_marginTop="3dp"
+            android:text="请尽快修改密码"
+            android:textColor="@color/text06"
+            android:textSize="@dimen/text02" />
+
         <TextView
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="修改登录密码"
             android:layout_marginTop="15dp"
             android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textSize="@dimen/title"
-            android:textColor="@color/white"/>
+            android:paddingTop="10dp"
+            android:text="修改登录密码"
+            android:textColor="@color/white"
+            android:textSize="@dimen/title" />
+
         <TextView
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="修改支付密码"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:textSize="@dimen/title"
-            android:textColor="@color/white"/>
+            android:paddingTop="10dp"
+            android:text="修改支付密码"
+            android:textColor="@color/white"
+            android:textSize="@dimen/title" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"></View>
     </LinearLayout>
 </LinearLayout>
