--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:text="下一步"
                     android:layout_marginTop="15dp"
-                    android:background="@drawable/yuanjiaolan"
+                    android:background="@drawable/yuanjiaolan2"
                     android:gravity="center"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
