--- a/app/src/main/res/layout/activity_change_phone1.xml
+++ b/app/src/main/res/layout/activity_change_phone1.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="更换密保手机"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -30,25 +30,21 @@
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/left"
         android:paddingTop="20dp"
+        android:textSize="@dimen/text01"
+        android:textColor="@color/text05"
         android:text="请验证原绑定手机号：********8723"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:background="@color/white"
+        android:background="@drawable/yuanjiao"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="15dp">
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/yanzhengma" />
-
         <EditText
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -63,21 +59,14 @@
             android:textColor="@color/text05"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="2dp"
-            android:background="@drawable/yuanjiaolan"
+            android:background="@drawable/yuanjiaolan2"
             android:textColor="@color/white"
             android:textSize="@dimen/text01"
-            android:padding="10dp"
+            android:padding="15dp"
             android:text="获取验证码"/>
     </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
-
-    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,7 +90,7 @@
             android:layout_height="wrap_content"
             android:text="下一步"
             android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaolan"
+            android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
