--- a/app/src/main/res/layout/activity_change_phone2.xml
+++ b/app/src/main/res/layout/activity_change_phone2.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="更换密保手机"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -32,39 +32,30 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/left"
         android:paddingTop="20dp"
-        android:text="请绑定新手机" />
+        android:text="请绑定新手机"
+        android:textSize="@dimen/text01"
+        android:textColor="@color/text05"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white">
-
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="+86" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:background="@color/bg1"></View>
+        android:background="@drawable/yuanjiao"
+        android:gravity="center_vertical">
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入验证码"
+            android:hint="新手机号码"
+            android:padding="15dp"
             android:singleLine="true"
             android:textColor="@color/text05"
             android:textColorHint="@color/text06"
@@ -72,45 +63,36 @@
             android:textSize="@dimen/text01" />
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_marginTop="15dp">
-            <ImageView
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/yanzhengma"/>
-            <EditText
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:hint="请输入验证码"
-                android:textSize="@dimen/text01"
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColorHint="@color/text06"
-                android:background="@null"
-                android:textCursorDrawable="@null"
-                android:textColor="@color/text05"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="2dp"
-                android:background="@drawable/yuanjiaolan"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text01"
-                android:padding="10dp"
-                android:text="获取验证码"/>
-        </LinearLayout>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:background="@drawable/yuanjiao"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp">
+        <EditText
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:hint="请输入验证码"
+            android:textSize="@dimen/text01"
+            android:singleLine="true"
+            android:layout_marginLeft="15dp"
+            android:textColorHint="@color/text06"
+            android:background="@null"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/text05"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="2dp"
+            android:background="@drawable/yuanjiaolan2"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text01"
+            android:padding="15dp"
+            android:text="获取验证码"/>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -134,7 +116,7 @@
             android:layout_height="wrap_content"
             android:text="确定"
             android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaolan"
+            android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
