--- a/app/src/main/res/layout/activity_change_phone3.xml
+++ b/app/src/main/res/layout/activity_change_phone3.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="更换密保手机"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -33,40 +33,128 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:textColor="@color/text05"
+        android:textColor="@color/text06"
         android:textSize="@dimen/text01"
         android:text="如果原密保手机已换号或不能接收到短信验证码，需提供一个能收验证码的新手机号和个人实名有效资料提交工作人员审核通过后才能更换新密保手机"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="@dimen/left">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_weight="1">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/yuanjiaohui">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@mipmap/jia"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:textColor="@color/text05"
+                android:textSize="@dimen/text01"
+                android:text="身份证正面"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_horizontal"
+            android:layout_weight="1">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/yuanjiaohui">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@mipmap/jia"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:textColor="@color/text05"
+                android:textSize="@dimen/text01"
+                android:text="身份证反面"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_horizontal"
+            android:layout_weight="1">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/yuanjiaohui">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@mipmap/jia"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:textColor="@color/text05"
+                android:textSize="@dimen/text01"
+                android:text="手持身份证"/>
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white">
-
+        android:background="@drawable/yuanjiao"
+        android:gravity="center_vertical">
         <TextView
-            android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:text="+86" />
-
+            android:id="@+id/city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:text="+86 中国"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <View
-            android:layout_width="10dp"
+            android:layout_width="2dp"
             android:layout_height="match_parent"
-            android:background="@color/bg1"></View>
-
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/bg2">
+        </View>
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入验证码"
+            android:hint="请输入新绑定的手机号码"
             android:singleLine="true"
             android:textColor="@color/text05"
             android:textColorHint="@color/text06"
@@ -76,7 +164,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="5dp">
         <TextView
             android:id="@+id/button_hui"
             android:layout_width="match_parent"
@@ -97,7 +185,7 @@
             android:layout_marginRight="20dp"
             android:text="确定"
             android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaolan"
+            android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
