--- a/app/src/main/res/layout/activity_change_phone4.xml
+++ b/app/src/main/res/layout/activity_change_phone4.xml
@@ -9,19 +9,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:background="@color/bg_title"/>
+        android:background="@color/bg_title2"/>
     <RelativeLayout
         style="@style/Title"
-        android:background="@color/bg_title">
+        android:background="@color/bg_title2">
         <include
             android:id="@+id/back"
-            layout="@layout/layout_back" />
+            layout="@layout/layout_back2" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="验证密保手机"
-            android:textColor="@color/text_title"
+            android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
             android:layout_width="match_parent"
@@ -32,21 +32,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:paddingLeft="@dimen/left"
+        android:paddingTop="20dp"
         android:textSize="@dimen/text01"
         android:textColor="@color/text05"
-        android:text="请验证待绑定手机号：132****8723"/>
+        android:text="请验证待绑定手机号：********8723"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:background="@drawable/yuanjiao"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="15dp">
-        <ImageView
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/yanzhengma"/>
         <EditText
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -61,21 +59,17 @@
             android:textColor="@color/text05"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="2dp"
-            android:background="@drawable/yuanjiaolan"
+            android:layout_height="match_parent"
+            android:background="@drawable/yuanjiaolan2"
             android:textColor="@color/white"
             android:textSize="@dimen/text01"
-            android:padding="10dp"
+            android:padding="15dp"
             android:text="获取验证码"/>
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/left"
-        android:layout_marginTop="60dp"
         android:paddingRight="@dimen/right">
         <TextView
             android:id="@+id/button_hui"
@@ -95,7 +89,7 @@
             android:layout_height="wrap_content"
             android:text="下一步"
             android:layout_marginTop="15dp"
-            android:background="@drawable/yuanjiaolan"
+            android:background="@drawable/yuanjiaolan2"
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
