--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg1"
-    tools:context="com.example.duan.duan.DCZ_activity.OperationRecordActivity">
+    tools:context="com.example.duan.duan.DCZ_activity.CityListActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
@@ -20,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="操作记录"
+            android:text="选择地区和国家"
             android:textColor="@color/text_title2"
             android:textSize="@dimen/title" />
         <TextView
@@ -29,9 +30,34 @@
             android:background="@color/xian1"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/listview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.jcodecraeer.xrecyclerview.XRecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/left"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/yuanjiao"
+        android:gravity="center_vertical">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:gravity="center"
+            android:hint="输入国家名查询"
+            android:padding="15dp"
+            android:singleLine="true"
+            android:textColor="@color/text05"
+            android:textColorHint="@color/text06"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/text01" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/xian1">
+    </View>
+
 </LinearLayout>
