--- a/app/src/main/res/layout/item_footprints1.xml
+++ b/app/src/main/res/layout/item_footprints1.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,14 +12,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:gravity="center_vertical"
             android:paddingLeft="@dimen/left"
             android:paddingRight="@dimen/right"
             android:paddingTop="15dp"
             android:paddingBottom="15dp">
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                fresco:placeholderImage="@mipmap/zhanwei"
+                fresco:placeholderImageScaleType="fitCenter"
+                fresco:roundedCornerRadius="5dp"
+                fresco:roundTopLeft="true"
+                fresco:roundTopRight="true"
+                fresco:roundBottomLeft="true"
+                fresco:roundBottomRight="true"/>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
+                android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/tv1"
@@ -40,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:background="@drawable/select"
+                android:background="@drawable/select2"
                 android:layout_gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
